# chuck26

./: .env.example  .gitignore  README.md  pyproject.toml  titles.csv
.github/workflows/: drive-review.yml  generate-review.yml  process-reviews.yml  reasoning-pipeline.yml  train-runpod.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  STACK.md  (+3 more)
docs/: runpod-finetune-loop.md
parodies2026/: .gitignore  README.md  batch_generate.py  drive_batch_processor.py  generate_parody.py  input.csv  known100.csv  parody_suggestions.py  push_tool_to_hub.py  requirements.txt  rlvr_dataset_tools.py  system_prompt.py  test.csv  test_popular_movies.py  upload_to_drive.py  word_phone.py  word_structures.py
pipeline/: build_reasoning_dataset.py  common.py  funny_words.json  generate_with_reasoning.py  movie_titles_1995_1999.csv  pod_bootstrap.sh  run_pipeline.py  train_reasoning_sft.py
scripts/: drive_review_app.py  generate_for_review.py  process_reviews.py
tests/: test_cli.py  test_config.py  test_dataset.py  test_drive_review_app.py  test_evaluate_parodies.py  test_generator.py  test_labeler.py  test_model.py  test_pipeline_common.py  test_process_reviews.py  test_rewards.py  test_traces.py  test_training_report.py  test_types.py
training/: README.md  evaluate_parodies.py  merge_and_push.py  quantize_awq.py  requirements.txt  runpod_train.py  setup_inference.sh  setup_runpod.sh  train_dpo.py  training_report.py  validate_inference.py  validate_merge.py
(+64 files in other folders)
